src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

h1 {
  margin-left: 40%;
  padding-top: 1.5%;
  font-family: "Bellota";
}
.input {
  border-bottom: 2px solid #935aff;
}
.card {
  border: 1px solid #de57e5;
  margin-left: 30%;
  margin-top: 10%;
}
.heroimg {
  padding-top: 30%;
}

/* @layer components {
  .align-element {
    @apply mx-auto max-w-6xl px-8;
  }
} */

/* html,
body {
  height: 100%;
  width: 100%;
} */

/*.container {
  height: 100vh;
  max-width: 100%;
  background-color: white;
  overflow: hidden;
}
h1 {
  margin-left: 40%;
  padding-top: 1.5%;
  font-size: 2rem;
  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  color: #8863fb;
}

.card-container {
  height: 100vh;
  max-width: 100%;
  display: flex;
  justify-content: center;
  align-content: center;
  text-align: center;
}

.card {
  margin-top: 10%;
  background-color: #8863fb;
}

.answer {
  margin-top: 15%;
}

.hero {
  max-width: 100%;
} */

